@@ -1,4 +1,8 @@
-﻿shmuel 02.10.2015 00:42:24 +0200 - build 531
+﻿shmuel 06.10.2015 07:38:08 +0200 - build 532
+
+1. Рефакторинг.
+
+shmuel 02.10.2015 00:42:24 +0200 - build 531
 
 1. LuaFAR: несколько изменилась интерпретация значения, возвращаемого export.ProcessConsoleInput -
    см. мануал.
